welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ')' expected but '[' found.
	if ( (talking && [0,7]) || (talking && [20,23]) ) {return true}
                         ^parotTrouble:4: error: ')' expected but '}' found.
}
^