welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if ( (talking && [0,7]) || (talking && [20,23]) ) {return true}
	else {return false}
}
